CB-10261 Entitlements: use internal crn instead of user crn (everywhere)